k8s/config-server/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: halitkalayci/config-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8787
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          # STARTUP PROBE: Uygulamanın başlaması için 5 dk bekle.
          startupProbe:
            httpGet:
              port: 8787
              path: /actuator/health
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
            failureThreshold: 21
            successThreshold: 1
          # Liveness Probe: Uygulama dondu mu?
          livenessProbe:
            httpGet:
              port: 8787
              path: /actuator/health
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
          # Readiness Probe: Trafik almaya hazır mı?
          readinessProbe:
            httpGet:
              port: 8787
              path: /actuator/health
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  type: NodePort
  selector:
    app: config-server
  ports:
    - port: 8787
      targetPort: 8787
      nodePort: 30087
      protocol: TCP
      name: http
